<resources>
    <string name="app_name" translatable="false">Gestock</string>
    <string name="user_fname">FirstName</string>
    <string name="user_lname">LastName</string>
    <string name="user_password">Password</string>
    <string name="user_repassorwd">Re-type your Password</string>
    <string name="user_email">Email</string>
    <string name="hint_username">Enter your mail adress</string>
    <string name="hint_password">Enter your password</string>
    <string name="user_login">Login</string>
    <string name="user_cansel_register">Cancel</string>
    <string name="user_register">Register</string>
    <string name="home_mouvement">Mouvement of Stock</string>
    <string name="home_config">Configuration</string>
    <string name="home_create_product">Create product</string>
    <string name="home_create_provider">Create Provider</string>
    <string name="home_create_frigo">create Fridge</string>
    <string name="home_search">Search</string>
    <string name="home_stat">Statistics</string>
    <string name="provider_name">Name</string>
    <string name="provider_adresse">Adress</string>
    <string name="create">Create</string>
    <string name="libelle">Wording</string>
    <string name="localisation">Location</string>
    <string name="temperature">Temperature</string>
    <string name="date">Date</string>
    <string name="gestionnaire_frigo">Create by</string>
    <string name="gest_frigo">Select the manager</string>
    <string name="libelle_produit">product label</string>
    <string name="description_produit">Product description</string>
    <string name="date_livraison">Delivery date</string>
    <string name="date_expiration">Expiration date</string>
    <string name="fournisseur">Supplier</string>
    <string name="qteseuil">threshold quantity </string>
    <string name="motif_mouvement">Justification</string>
    <string name="frigo">Fridge</string>
    <string name="qte">Quantity</string>
    <string name="valider">Validate</string>
    <string name="type_mouvement">Type of mouvement</string>
    <string name="entre">Entry</string>
    <string name="sortie">Out</string>
    <string name="verif_stock">Check Stock</string>
    <string name="modifier_produit">Update Product</string>
    <string name="modifier_profil">Update profil</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
