<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:fillViewport="true">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="bt.be.bddapplication.Controler.ConfigActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verif_stock"
        style="@style/MyButton.Green"
        android:id="@+id/btn_check_stock"
        android:height="150dp"
        android:gravity="center"
        android:onClick="gotoCheckStock"
        android:layout_gravity="center_vertical"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modifier_produit"
        style="@style/MyButton.Green"
        android:height="150dp"
        android:gravity="center"
        android:layout_gravity="center_vertical"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/MyButton.Green"
        android:text="@string/modifier_profil"
        android:height="150dp"/>
</LinearLayout>
</ScrollView>